ImGUI initial configuration

--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -3,10 +3,13 @@ cmake_minimum_required(VERSION 3.8)
 set(This GUI)
 
 set(HEADERS
-#    include/
+    include/GUI/Platform/OpenGL/imgui_impl_glfw.h
+    include/GUI/Platform/OpenGL/imgui_impl_opengl3.h
 )
 
 set(SOURCES
+    src/OpenGL/imgui_impl_glfw.cpp
+    src/OpenGL/imgui_impl_opengl3.cpp
     src/main.cpp
 )
 
@@ -22,6 +25,8 @@ set(SOURCES
 
 # How to add compilation definitions:
 # add_compile_definitions(difinition)
+add_compile_definitions(IMGUI_IMPL_OPENGL_LOADER_GLEW)
+add_compile_definitions(GLEW_STATIC)
 
 # executable
 add_executable(${This} ${SOURCES} ${HEADERS})
